--- a/src/components/Burger/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/Burger/BurgerIngredients/BurgerIngredients.module.css
@@ -81,10 +81,10 @@
   }
   
 
-.Meat {
+.Cream {
     width: 80%;
     height: 8%;
-    background: linear-gradient(#7f3608, #702e05);
+    background: linear-gradient(#FFFDD0, #f3efed);
     margin: 2% auto;
     border-radius: 15px;
 }
@@ -105,9 +105,10 @@
     border-radius: 20px;
 }
 
-.Bacon {
+.Tomato {
     width: 80%;
-    height: 3%;
-    background: linear-gradient(#bf3813, #c45e38);
+    height: 5%;
+    background: linear-gradient(#f32004, #d41b03);
     margin: 2% auto;
+    border-radius: 20px;
 }
